--- a/BusinessCardApp/app/build.gradle
+++ b/BusinessCardApp/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("io.freefair.lombok") version "5.3.0"
 }
 
 android {
